Fixed overflow svg display

--- a/svg-design-demo/src/app/components/design-window/design-window.component.css
+++ b/svg-design-demo/src/app/components/design-window/design-window.component.css
@@ -11,6 +11,8 @@
 
 #currentTemplate {
     margin:auto;
-    padding:25px;
+    padding-top:25px;
+    padding-bottom:25px;
     width:100%;
+    overflow: visible;
 }
